Fixed icon alignment

--- a/assets/css/3-modules/_about.sass
+++ b/assets/css/3-modules/_about.sass
@@ -49,6 +49,9 @@
 			width: auto
 			margin-bottom: 30px
 
+		[class^="icon-"]
+			margin: 10px 9%
+
 .about-blurb
 	max-width: 620px
 	padding: 0 15px
